jira-confluence/jira-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jira-deployment
  namespace: jira
  labels:
    app: jira
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jira
  template:
    metadata:
      labels:
        app: jira
    spec:
      containers:
      - name: jira
        image: registry.acm.cs:31300/jira:1.1
        ports:
        - containerPort: 8080
        volumeMounts:
          - name: jira-mount
            mountPath: /var/atlassian/application-data/jira
      volumes:
      - name: jira-mount
        persistentVolumeClaim:
          claimName: jira-pvc
