jira-confluence/jira-service.yml
apiVersion: v1
kind: Service
metadata:
  name: jira-service
  namespace: jira
  labels:
    app: jira
spec:
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    app: jira
