jira-confluence/jira-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jira-ingress
  namespace: jira
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  rules:
  - host: jira.acm.cs
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: jira-service
              port:
                number: 8080
